# Sign_Language_Classification

./: README.md  best_model.pth  pyproject.toml  requirements.txt  sign_language_classification_final.ipynb
data/wandb/: latest-run
data/wandb/run-20240606_170336-out3czt0/: run-out3czt0.wandb
data/wandb/run-20240606_184505-jzayrkjf/: run-jzayrkjf.wandb
data/wandb/run-20240607_095115-rskchntr/: run-rskchntr.wandb
data/wandb/run-20240607_173411-o7720g4a/: run-o7720g4a.wandb
data/wandb/run-20240607_180944-ar6t4z12/: run-ar6t4z12.wandb
data/wandb/run-20240607_182536-y45wdjql/: run-y45wdjql.wandb
data/wandb/run-20240607_190739-75j7mfrt/: run-75j7mfrt.wandb
data/wandb/run-20240608_115608-kc5srdyn/: run-kc5srdyn.wandb
data/wandb/run-20240608_122058-hj9brvia/: run-hj9brvia.wandb
data/wandb/run-20240608_150735-5cb79c6m/: run-5cb79c6m.wandb
data/wandb/run-20240608_150924-gims8ugd/: run-gims8ugd.wandb
data/wandb/run-20240608_150956-rxugsswq/: run-rxugsswq.wandb
data/wandb/run-20240608_151351-i334wd7x/: run-i334wd7x.wandb
data/wandb/run-20240608_151433-bhma19zy/: run-bhma19zy.wandb
data/wandb/run-20240608_152045-j0u2u7s8/: run-j0u2u7s8.wandb
data/wandb/run-20240608_155907-r030ssp3/: run-r030ssp3.wandb
data/wandb/run-20240608_162328-nl1d3w7t/: run-nl1d3w7t.wandb
data/wandb/run-20240608_163810-zxivdf54/: run-zxivdf54.wandb
data/wandb/run-20240608_165720-pp2lzdui/: run-pp2lzdui.wandb
data/wandb/sweep-7aqyq66d/: config-6iyhfcqi.yaml  (+2 more)
visualization/: visualization.ipynb
visualization/csv_files_wb_runs/: f1.csv  test_loss.csv  train_loss.csv
(+264 files in other folders)
