[tool.poetry]
name = "ml-assignment"
version = "0.1.0"
description = "Machine Learning Projekt aus dem sechsten Semester."
authors = ["FelixWidmann <91742120+FelixWidmann@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "2.2.2"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
wandb = "^0.17.0"
graphviz = "^0.20.3"
torchsummary = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
